@@ -16,6 +16,7 @@ Card Maker Version History
 - Element enabled state toggle is now part of undo/redo
 - Disabled elements no longer accept changes (well hopefully). They should also block some multi-element actions.
 - Added Clear Image Cache and Reload References buttons to the Canvas toolbar
+- Minor improvements to the layout template selection dialog (including a text filter)
 
 1.0.0.0
 - Added limit to the number of loops of translation within Incept (should protect against typos)
